src/objects/AF_BonusQuarterly_Quarterdates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for change status depending on the quarter dates</description>
    <fields>
        <fullName>AF_Q1__c</fullName>
        <label>Q1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AF_Q2__c</fullName>
        <label>Q2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AF_Q3__c</fullName>
        <label>Q3</label>
        <type>Date</type>
    </fields>
    <label>AF_BonusQuarterly_Quarterdates</label>
</CustomObject>